tgthrProgramManagement/force-app/main/default/objects/Income_Benefit__c/Income_Benefit__c.object-meta.xml
<CustomObject>
    <description>Tracks individual income sources and non-cash benefits for HMIS compliance. Master-detail to Assessment to capture point-in-time income data during intake assessments.</description>
    <label>Income &amp; Benefit</label>
    <nameField>
        <displayFormat>IB-{0000}</displayFormat>
        <label>Income &amp; Benefit Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Income &amp; Benefits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>