tgthrProgramManagement/force-app/main/default/objects/Income_Benefit__c/fields/Documentation_Notes__c.field-meta.xml
<CustomField>
    <fullName>Documentation_Notes__c</fullName>
    <inlineHelpText>Notes about documentation status or verification details.</inlineHelpText>
    <label>Documentation Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>