tgthrProgramManagement/force-app/main/default/objects/Income_Benefit__c/fields/Documented__c.field-meta.xml
<CustomField>
    <fullName>Documented__c</fullName>
    <inlineHelpText>Has this income source been documented/verified?</inlineHelpText>
    <label>Documented</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Pending Verification</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>