tgthrProgramManagement/force-app/main/default/objects/Income_Benefit__c/fields/Has_Documentation__c.field-meta.xml
<CustomField>
    <fullName>Has_Documentation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Documentation</label>
    <type>Checkbox</type>
</CustomField>