tgthrProgramManagement/force-app/main/default/objects/Income_Benefit__c/fields/Income_Source_Type__c.field-meta.xml
<CustomField>
    <fullName>Income_Source_Type__c</fullName>
    <inlineHelpText>HUD/HMIS-compliant income source type.</inlineHelpText>
    <label>Income Source Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Earned Income (Wages, Self-Employment)</fullName>
            </value>
            <value>
                <fullName>Unemployment Insurance</fullName>
            </value>
            <value>
                <fullName>SSI (Supplemental Security Income)</fullName>
            </value>
            <value>
                <fullName>SSDI (Social Security Disability Insurance)</fullName>
            </value>
            <value>
                <fullName>VA Disability Compensation</fullName>
            </value>
            <value>
                <fullName>VA Pension</fullName>
            </value>
            <value>
                <fullName>Private Disability Insurance</fullName>
            </value>
            <value>
                <fullName>Workers Compensation</fullName>
            </value>
            <value>
                <fullName>TANF (Temporary Assistance for Needy Families)</fullName>
            </value>
            <value>
                <fullName>General Assistance (GA)</fullName>
            </value>
            <value>
                <fullName>Retirement Income (Social Security, Pension)</fullName>
            </value>
            <value>
                <fullName>Pension from Former Job</fullName>
            </value>
            <value>
                <fullName>Child Support</fullName>
            </value>
            <value>
                <fullName>Alimony</fullName>
            </value>
            <value>
                <fullName>Other Income Source</fullName>
            </value>
            <value>
                <fullName>Client Doesn&apos;t Know</fullName>
            </value>
            <value>
                <fullName>Prefers Not to Answer</fullName>
            </value>
            <value>
                <fullName>Data Not Collected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>