tgthrProgramManagement/force-app/main/default/objects/Income_Benefit__c/fields/Income_Type__c.field-meta.xml
<CustomField>
    <fullName>Income_Type__c</fullName>
    <label>Income/Benefit Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Financial Resources</fullName>
            </value>
            <value>
                <fullName>Earned Income (i.e. employment income)</fullName>
            </value>
            <value>
                <fullName>Unemployment Insurance</fullName>
            </value>
            <value>
                <fullName>Supplemental Security Income (SSI)</fullName>
            </value>
            <value>
                <fullName>Social Security Disability Income (SSDI)</fullName>
            </value>
            <value>
                <fullName>Veteran&apos;s Service-Connected Disability Compensation</fullName>
            </value>
            <value>
                <fullName>Veteran&apos;s Non-Service-Connected Disability Compensation</fullName>
            </value>
            <value>
                <fullName>Private Disability Insurance</fullName>
            </value>
            <value>
                <fullName>Worker&apos;s Compensation</fullName>
            </value>
            <value>
                <fullName>Temporary Assistance for Needy Families (TANF)</fullName>
            </value>
            <value>
                <fullName>General Assistance (GA)</fullName>
            </value>
            <value>
                <fullName>Retirement Income from Social Security</fullName>
            </value>
            <value>
                <fullName>Pension from Former Job</fullName>
            </value>
            <value>
                <fullName>Child Support</fullName>
            </value>
            <value>
                <fullName>Alimony/Other Spousal Support</fullName>
            </value>
            <value>
                <fullName>Aid to the Needy and Disabled (AND)</fullName>
            </value>
            <value>
                <fullName>Old Age Pension (OAP)</fullName>
            </value>
            <value>
                <fullName>Other Sources</fullName>
            </value>
            <value>
                <fullName>Client Doesn&apos;t Know</fullName>
            </value>
            <value>
                <fullName>Prefers not to answer</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Food Stamps/SNAP</fullName>
            </value>
            <value>
                <fullName>TANF Child Care</fullName>
            </value>
            <value>
                <fullName>Temporary Rental Assistance</fullName>
            </value>
            <value>
                <fullName>TANF Transportation Services</fullName>
            </value>
            <value>
                <fullName>Section 8 or Rental Assistance</fullName>
            </value>
            <value>
                <fullName>WIC (Women, Infants and Children)</fullName>
            </value>
            <value>
                <fullName>Other TANF-funded Services</fullName>
            </value>
            <value>
                <fullName>Other Benefit Source</fullName>
            </value>
            <value>
                <fullName>Alimony/Spousal Support</fullName>
                <isActive>false</isActive>
                <label>Alimony/Spousal Support</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>