tgthrProgramManagement/force-app/main/default/objects/Income_Benefit__c/fields/Stated_Income__c.field-meta.xml
<CustomField>
    <fullName>Stated_Income__c</fullName>
    <label>Stated Income (Monthly)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>