tgthrProgramManagement/force-app/main/default/objects/Income_Benefit__c/fields/Stated_Monthly_Amount__c.field-meta.xml
<CustomField>
    <fullName>Stated_Monthly_Amount__c</fullName>
    <inlineHelpText>Client-stated monthly income amount from this source.</inlineHelpText>
    <label>Stated Monthly Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>